image preview using next image

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^19.0.0",
     "react-element-to-jsx-string": "^17.0.1",
     "sharp": "^0.34.1",
-    "tailwind-merge": "^3.3.0"
+    "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
