--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "motion": "^12.11.0",
     "next": "15.3.1",
     "react": "^19.0.0",
+    "react-advanced-cropper": "^0.20.1",
     "react-dom": "^19.0.0",
     "react-element-to-jsx-string": "^17.0.1",
     "sharp": "^0.34.1",
