--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-menubar": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
@@ -24,6 +24,7 @@
     "react-dom": "^19.0.0",
     "react-element-to-jsx-string": "^17.0.1",
     "sharp": "^0.34.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0"
   },
