Climbing Loader added

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-advanced-cropper": "^0.20.1",
     "react-dom": "^19.0.0",
     "react-element-to-jsx-string": "^17.0.1",
+    "react-spinners": "^0.17.0",
     "sharp": "^0.34.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.0",
