--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@radix-ui/react-select": "^2.2.5",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
     "motion": "^12.11.0",
     "next": "15.3.1",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-advanced-cropper": "^0.20.1",
     "react-dom": "^19.0.0",
