--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-menubar": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
